# tuplequery

./: Cargo.toml  LICENSE  README.md  build.rs
benches/: benchmark.rs
examples/: datascript.rs
src/: datascript.rs  lib.rs  main.rs
src/clause/: mod.rs  relation.rs
src/helpers/: debug_only.rs  macros.rs  mod.rs  toposort.rs
src/join/: hash.rs  merge.rs  mod.rs  product.rs
src/tuple/: bitset.rs  check_fields.rs  dense.rs  entity.rs  mod.rs  sparse.rs
