[package]
name = "tuplequery"
version = "0.1.0"
authors = ["Grégoire Geis <opensource@gregoirege.is>"]
edition = "2018"
build = "build.rs"
license = "ISC"

[dependencies]
hashbrown = { version = "0.9", optional = true }
smallvec = { version = "1.6", features = ["const_generics", "union"] }
thiserror = "1.0"

[[example]]
name = "datascript"

[build-dependencies]
rustc_version = "0.3"

[dev-dependencies]
nom = "6.1"
serde_json = "1.0"

[features]
use_hashbrown = ["hashbrown"]
