[package]
name = "tuplequery"
version = "0.1.0"
authors = ["Grégoire Geis <opensource@gregoirege.is>"]
edition = "2018"
build = "build.rs"
license = "ISC"

[dependencies]
hashbrown = { version = "0.9", optional = true }
smallvec = { version = "1.6", features = ["const_generics", "union"] }
thiserror = "1.0"

nom = { version = "6.1", optional = true }
serde_json = { version = "1.0", optional = true }

crates-index = { version = "0.16", optional = true }

[build-dependencies]
rustc_version = "0.3"

[dev-dependencies]
criterion = "0.3"

[features]
use_hashbrown = ["hashbrown"]
datascript = ["nom", "serde_json"]
benchmark = ["crates-index"]

[lib]
bench = false

[[bin]]
name = "tuplequery"
required-features = ["datascript"]
bench = false

[[bench]]
name = "benchmark"
harness = false
required-features = ["datascript", "benchmark"]
